<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ComposeActivity"
    tools:showIn="@layout/activity_compose">

    <AutoCompleteTextView
        android:id="@+id/auto_complete_edit_text_recipient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:hint="@string/hint_edit_text_recipient"
        android:padding="@dimen/default_spacing"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_recipient"
        style="@style/Divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auto_complete_edit_text_recipient" />

    <EditText
        android:id="@+id/edit_text_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:hint="@string/hint_edit_text_subject"
        android:padding="@dimen/default_spacing"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_recipient" />

    <View
        android:id="@+id/divider_subject"
        style="@style/Divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_subject" />

    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_edit_text_message"
        android:inputType="textMultiLine"
        android:padding="@dimen/default_spacing"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_subject" />

</android.support.constraint.ConstraintLayout>
